fix: market colour contrast

--- a/src/components/atoms/NE_Card/NE_DetailCard/Market/Market.module.scss
+++ b/src/components/atoms/NE_Card/NE_DetailCard/Market/Market.module.scss
@@ -5,6 +5,10 @@
     @include flex-center;
     margin-left: var(--space-xxxxs);
     gap: var(--space-xxxxs);
+    height: var(--space-m);
+    padding: var(--space-xxxxs) var(--space-xxs) var(--space-xxxxs)
+      var(--space-xxxs);
+    border-radius: var(--space-s);
     &__icon {
       width: var(--space-m);
     }
