--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -6,8 +6,8 @@
   --midnight-blue: hsl(202, 96%, 11%);
   --white: hsl(0, 0%, 100%);
   --dark-grey: hsl(290, 7%, 17%);
-  --market-green: hsl(134, 100%, 50%);
-  --market-red: hsl(354, 100%, 50%);
+  --market-green: hsl(134, 61%, 41%);
+  --market-red: hsl(354, 70%, 54%);
   --market-yellow: hsl(50, 70%, 50%);
   --paper-white: hsl(210, 17%, 98%);
   --pale-white: hsl(210, 25%, 97%);
